Extra quotation marks
Extra quotation marks were used in line 136 for "pleased" which underlined the word and marked it red, removed the quotation mark and now it looks fine.

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png">:<span class="name" data-alternative-name="face, love, like, affection, valentines, infatuation">kissing_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/flushed.png">:<span class="name" data-alternative-name="flustered, embarassed, face, blush, shy, flattered">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png">:<span class="name" data-alternative-name="face, relaxed, phew, massage, happiness">relieved</span>:</div></li>
-      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented","pleased">satisfied</span>:</div></li>
+      <li><div><img src="graphics/emojis/satisfied.png">:<span class="name" data-alternative-name="contented, pleased">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png">:<span class="name" data-alternative-name="happy, smile, face, joy">grin</span>:</div></li>
       <li><div><img src="graphics/emojis/wink.png">:<span class="name" data-alternative-name="flirt, face, happy, mischievous, secret">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png">:<span class="name" data-alternative-name="face, prank, childish, playful, mischievous, smile">stuck_out_tongue_winking_eye</span>:</div></li>
