--- a/public/index.html
+++ b/public/index.html
@@ -488,7 +488,7 @@
       <li><div><img src="graphics/emojis/mag.png">:<span class="name" data-alternative-name="magnifying, glass, search, zoom, find, detective">mag</span>:</div></li>
       <li><div><img src="graphics/emojis/mag_right.png">:<span class="name" data-alternative-name="magnifying, glass, search, zoom, find, detective">mag_right</span>:</div></li>
       <li><div><img src="graphics/emojis/unlock.png">:<span class="name" data-alternative-name="privacy, security">unlock</span>:</div></li>
-      <li><div><img src="graphics/emojis/lock.png">:<span class="name" data-alternative-name="security, password, padlock">lock</span>:</div></li>
+      <li><div><img src="graphics/emojis/lock.png">:<span class="name" data-alternative-name="security, password, padlock, SSL(Secure Scoket Layer)">lock</span>:</div></li>
       <li><div><img src="graphics/emojis/lock_with_ink_pen.png">:<span class="name" data-alternative-name="security, secret">lock_with_ink_pen</span>:</div></li>
       <li><div><img src="graphics/emojis/closed_lock_with_key.png">:<span class="name" data-alternative-name="security, privacy">closed_lock_with_key</span>:</div></li>
       <li><div><img src="graphics/emojis/key.png">:<span class="name" data-alternative-name="lock, door, password">key</span>:</div></li>
