--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
       <li><div><img src="graphics/emojis/zzz.png">:<span class="name" data-alternative-name="sleep, bored, sleepy, tired">zzz</span>:</div></li>
       <li><div><img src="graphics/emojis/dash.png">:<span class="name" data-alternative-name="wind, air, fast, shoo, fart, smoke, puff">dash</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_drops.png">:<span class="name" data-alternative-name="water, drip, oops">sweat_drops</span>:</div></li>
-      <li><div><img src="graphics/emojis/notes.png">:<span class="name data-alternative-name=" music""="" data-alternative-name="music, score">notes</span>:</div></li>
+      <li><div><img src="graphics/emojis/notes.png">:<span class="name" data-alternative-name=" music, singing, score">notes</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_note.png">:<span class="name" data-alternative-name="music, score, tone, sound">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png">:<span class="name" data-alternative-name="hot, cook, flame">fire</span>:</div></li>
       <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd">hankey</span>:</div></li>
