--- a/public/index.html
+++ b/public/index.html
@@ -761,7 +761,7 @@
       <li><div><img src="graphics/emojis/police_car.png">:<span class="name" data-alternative-name="vehicle, cars, transportation, law, legal, enforcement">police_car</span>:</div></li>
       <li><div><img src="graphics/emojis/oncoming_police_car.png">:<span class="name" data-alternative-name="vehicle, law, legal, enforcement, 911">oncoming_police_car</span>:</div></li>
       <li><div><img src="graphics/emojis/fire_engine.png">:<span class="name" data-alternative-name="vehicle, transportation, cars">fire_engine</span>:</div></li>
-      <li><div><img src="graphics/emojis/ambulance.png">:<span class="name" data-alternative-name="vehicle, health, 911, hospital">ambulance</span>:</div></li>
+      <li><div><img src="graphics/emojis/ambulance.png">:<span class="name" data-alternative-name="vehicle, health, 911, emergency, hospital">ambulance</span>:</div></li>
       <li><div><img src="graphics/emojis/minibus.png">:<span class="name" data-alternative-name="vehicle, car, transportation">minibus</span>:</div></li>
       <li><div><img src="graphics/emojis/truck.png">:<span class="name" data-alternative-name="vehicle, cars, transportation">truck</span>:</div></li>
       <li><div><img src="graphics/emojis/train.png">:<span class="name" data-alternative-name="vehicle, transportation, carriage, public, travel">train</span>:</div></li>
