Alternate keyword to Shark - "marine"

--- a/public/index.html
+++ b/public/index.html
@@ -364,8 +364,8 @@
       <li><div><img src="graphics/emojis/octopus.png">:<span class="name" data-alternative-name="animal, creature, ocean, sea, nature, beach">octopus</span>:</div></li>
       <li><div><img src="graphics/emojis/tropical_fish.png">:<span class="name" data-alternative-name="animal, swim, ocean, beach, nemo">tropical_fish</span>:</div></li>
       <li><div><img src="graphics/emojis/fish.png">:<span class="name" data-alternative-name="animal, food, nature">fish</span>:</div></li>
-      <li><div><img src="graphics/emojis/whale.png">:<span class="name" data-alternative-name="animal, nature, sea, ocean">whale</span>:</div></li>
-      <li><div><img src="graphics/emojis/whale2.png">:<span class="name" data-alternative-name="animal, nature, sea, ocean">whale2</span>:</div></li>
+      <li><div><img src="graphics/emojis/whale.png">:<span class="name" data-alternative-name="animal, marine, nature, sea, ocean">whale</span>:</div></li>
+      <li><div><img src="graphics/emojis/whale2.png">:<span class="name" data-alternative-name="animal, marine, nature, sea, ocean">whale2</span>:</div></li>
       <li><div><img src="graphics/emojis/dolphin.png">:<span class="name" data-alternative-name="animal, nature, fish, sea, ocean, flipper, fins, beach">dolphin</span>:</div></li>
       <li><div><img src="graphics/emojis/cow2.png">:<span class="name" data-alternative-name="animal, beef, ox, nature, moo, milk">cow2</span>:</div></li>
       <li><div><img src="graphics/emojis/ram.png">:<span class="name" data-alternative-name="animal, sheep, nature">ram</span>:</div></li>
