--- a/public/index.html
+++ b/public/index.html
@@ -431,7 +431,7 @@
       <li><div><img src="graphics/emojis/milky_way.png">:<span class="name" data-alternative-name="photo, space, stars">milky_way</span>:</div></li>
       <li><div><img src="graphics/emojis/partly_sunny.png">:<span class="name" data-alternative-name="weather, nature, cloudy, morning, fall, spring">partly_sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/octocat.png">:<span class="name" data-alternative-name="github, animal, octopus, custom_">octocat</span>:</div></li>
-      <li><div><img src="graphics/emojis/squirrel.png">:<span class="name" data-alternative-name="animal">squirrel</span>:</div></li>
+      <li><div><img src="graphics/emojis/squirrel.png">:<span class="name" data-alternative-name="animal, chipmunk">squirrel</span>:</div></li>
     </ul>
     <h2>Objects</h2>
     <ul class="objects emojis" id="emoji-objects">
