alternative name changed at line 150 of grimacing to mental and emotional

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
       <li><div><img src="graphics/emojis/frowning.png">:<span class="name" data-alternative-name="face, aw, what">frowning</span>:</div></li>
       <li><div><img src="graphics/emojis/anguished.png">:<span class="name" data-alternative-name="face, stunned, nervous">anguished</span>:</div></li>
       <li><div><img src="graphics/emojis/open_mouth.png">:<span class="name" data-alternative-name="face, surprise, impressed, wow">open_mouth</span>:</div></li>
-      <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth">grimacing</span>:</div></li>
+      <li><div><img src="graphics/emojis/grimacing.png">:<span class="name" data-alternative-name="face, grimace, teeth, mental, emotional">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png">:<span class="name" data-alternative-name="baffled, puzzled, face, indifference, huh, weird, hmmm">confused</span>:</div></li>
       <li><div><img src="graphics/emojis/hushed.png">:<span class="name" data-alternative-name="face, woo, shh,conceal,hide">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png">:<span class="name" data-alternative-name="deadpan, face, indifferent, -_-, meh">expressionless</span>:</div></li>
