--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,8 @@
       <a href="https://youtube.com">YouTube</a>,
       <a href="https://habitica.com">Habitica</a>,
       <a href="http://www.mattermost.org/">Mattermost</a>
-      and <a href="http://kanbantool.com/">Kanban Tool</a>
+      <a href="http://kanbantool.com/">Kanban Tool</a>
+      and <a href="https://telegram.org/">Telegram</a>
     </p>
 
     <p>
