Added Telegram to README.md and missing comma in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
       <a href="http://datenstrom.se/yellow/">Yellow</a>,
       <a href="https://youtube.com">YouTube</a>,
       <a href="https://habitica.com">Habitica</a>,
-      <a href="http://www.mattermost.org/">Mattermost</a>
+      <a href="http://www.mattermost.org/">Mattermost</a>,
       <a href="http://kanbantool.com/">Kanban Tool</a>
       and <a href="https://telegram.org/">Telegram</a>
     </p>
