Added new Synonym for articulated lorry and corrected checkered flag synonym spelling

--- a/public/index.html
+++ b/public/index.html
@@ -754,7 +754,7 @@
       <li><div><img src="graphics/emojis/red_car.png">:<span class="name" data-alternative-name="vehicle">red_car</span>:</div></li>
       <li><div><img src="graphics/emojis/taxi.png">:<span class="name" data-alternative-name="vehicle, car, uber, cars, transportation">taxi</span>:</div></li>
       <li><div><img src="graphics/emojis/oncoming_taxi.png">:<span class="name" data-alternative-name="vehicle, car, cars, uber">oncoming_taxi</span>:</div></li>
-      <li><div><img src="graphics/emojis/articulated_lorry.png">:<span class="name" data-alternative-name="vehicle, cars, transportation, express">articulated_lorry</span>:</div></li>
+      <li><div><img src="graphics/emojis/articulated_lorry.png">:<span class="name" data-alternative-name="vehicle, cars, transportation,truck express">articulated_lorry</span>:</div></li>
       <li><div><img src="graphics/emojis/bus.png">:<span class="name" data-alternative-name="vehicle, car, transportation">bus</span>:</div></li>
       <li><div><img src="graphics/emojis/oncoming_bus.png">:<span class="name" data-alternative-name="vehicle, transportation">oncoming_bus</span>:</div></li>
       <li><div><img src="graphics/emojis/rotating_light.png">:<span class="name" data-alternative-name="police, ambulance, 911, emergency, alert, error, pinged, law, legal">rotating_light</span>:</div></li>
@@ -785,7 +785,7 @@
       <li><div><img src="graphics/emojis/busstop.png">:<span class="name" data-alternative-name="transportation, wait">busstop</span>:</div></li>
       <li><div><img src="graphics/emojis/barber.png">:<span class="name" data-alternative-name="hair, salon, style">barber</span>:</div></li>
       <li><div><img src="graphics/emojis/hotsprings.png">:<span class="name" data-alternative-name="bath, warm, relax">hotsprings</span>:</div></li>
-      <li><div><img src="graphics/emojis/checkered_flag.png">:<span class="name" data-alternative-name="contest, finishline, rase, gokart">checkered_flag</span>:</div></li>
+      <li><div><img src="graphics/emojis/checkered_flag.png">:<span class="name" data-alternative-name="contest, finishline, race, gokart">checkered_flag</span>:</div></li>
       <li><div><img src="graphics/emojis/crossed_flags.png">:<span class="name" data-alternative-name="japanese, nation, country, border">crossed_flags</span>:</div></li>
       <li><div><img src="graphics/emojis/izakaya_lantern.png">:<span class="name" data-alternative-name="light, paper, halloween, spooky">izakaya_lantern</span>:</div></li>
       <li><div><img src="graphics/emojis/moyai.png">:<span class="name" data-alternative-name="stone, easter island, beach, statue">moyai</span>:</div></li>
