--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,7 @@
       <li><div><img src="graphics/emojis/triumph.png">:<span class="name" data-alternative-name="face, gas, phew, proud, pride">triumph</span>:</div></li>
       <li><div><img src="graphics/emojis/sleepy.png">:<span class="name" data-alternative-name="tired, zzz, face, rest, nap">sleepy</span>:</div></li>
       <li><div><img src="graphics/emojis/yum.png">:<span class="name" data-alternative-name="delicious, happy, joy, tongue, smile, face, silly, yummy">yum</span>:</div></li>
+      <li><div><img src="graphics/emojis/thinking_face.png">:<span class="name" data-alternative-name="thinking, thought, thinker">thinking_face</span>:</div></li>
       <li><div><img src="graphics/emojis/mask.png">:<span class="name" data-alternative-name="face, sick, ill, disease">mask</span>:</div></li>
       <li><div><img src="graphics/emojis/sunglasses.png">:<span class="name" data-alternative-name="shades, face, cool, smile, summer, beach">sunglasses</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy_face.png">:<span class="name" data-alternative-name="ko, spent, unconscious, xox">dizzy_face</span>:</div></li>
