--- a/public/index.html
+++ b/public/index.html
@@ -314,6 +314,7 @@
       <li><div><img src="graphics/emojis/rage4.png">:<span class="name" data-alternative-name="angry, mad, hate, despise">rage4</span>:</div></li>
       <li><div><img src="graphics/emojis/suspect.png">:<span class="name" data-alternative-name="mad, custom_">suspect</span>:</div></li>
       <li><div><img src="graphics/emojis/trollface.png">:<span class="name" data-alternative-name="internet, meme, custom_">trollface</span>:</div></li>
+      <li><div><img src="graphics/emojis/all_the_things.png">:<span class="name" data-alternative-name="happy, cheerful, face, joy, funny, haha, laugh, like">all_the_things</span>:</div></li>
     </ul>
     <h2>Nature</h2>
     <ul class="nature emojis" id="emoji-nature">
