Added alternative name

--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
       <li><div><img src="graphics/emojis/sunny.png">:<span class="name" data-alternative-name="weather, sun, nature, brightness, summer, beach, spring">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png">:<span class="name" data-alternative-name="water, rain, rainy, weather, spring">umbrella</span>:</div></li>
       <li><div><img src="graphics/emojis/cloud.png">:<span class="name" data-alternative-name="weather, sky">cloud</span>:</div></li>
-      <li><div><img src="graphics/emojis/snowflake.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas">snowflake</span>:</div></li>
+      <li><div><img src="graphics/emojis/snowflake.png">:<span class="name" data-alternative-name="snow, winter, season, cold, weather, christmas, xmas">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas, frozen">snowman</span>:</div></li>
       <li><div><img src="graphics/emojis/zap.png">:<span class="name" data-alternative-name="weather, lightning, thunder, lightning bolt, fast">zap</span>:</div></li>
       <li><div><img src="graphics/emojis/cyclone.png">:<span class="name" data-alternative-name="weather, swirl, blue, cloud">cyclone</span>:</div></li>
