Added alternative names

--- a/public/index.html
+++ b/public/index.html
@@ -602,7 +602,7 @@
       <li><div><img src="graphics/emojis/mahjong.png">:<span class="name" data-alternative-name="game, play, chinese, kanji">mahjong</span>:</div></li>
       <li><div><img src="graphics/emojis/clapper.png">:<span class="name" data-alternative-name="movie, film, record">clapper</span>:</div></li>
       <li><div><img src="graphics/emojis/memo.png">:<span class="name" data-alternative-name="write, documents, stationery, pencil, paper, writing, legal, exam, quiz, test, study">memo</span>:</div></li>
-      <li><div><img src="graphics/emojis/pencil.png">:<span class="name" data-alternative-name="write">pencil</span>:</div></li>
+      <li><div><img src="graphics/emojis/pencil.png">:<span class="name" data-alternative-name="write, study">pencil</span>:</div></li>
       <li><div><img src="graphics/emojis/book.png">:<span class="name" data-alternative-name="open_book, read, library, knowledge, literature, learn, study">book</span>:</div></li>
       <li><div><img src="graphics/emojis/art.png">:<span class="name" data-alternative-name="design, paint, draw">art</span>:</div></li>
       <li><div><img src="graphics/emojis/microphone.png">:<span class="name" data-alternative-name="sound, music, PA">microphone</span>:</div></li>
