Added some data-alterative-name entries

--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
       <li><div><img src="graphics/emojis/notes.png">:<span class="name data-alternative-name=" music""="" data-alternative-name="music, score">notes</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_note.png">:<span class="name" data-alternative-name="music, score, tone, sound">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png">:<span class="name" data-alternative-name="hot, cook, flame">fire</span>:</div></li>
-      <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd">hankey</span>:</div></li>
+      <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd, crap, dump">hankey</span>:</div></li>
       <li><div><img src="graphics/emojis/poop.png">:<span class="name" data-alternative-name="shit, turd">poop</span>:</div></li>
       <li><div><img src="graphics/emojis/shit.png">:<span class="name" data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png">:<span class="name" data-alternative-name="thumbsup, yes, awesome, good, agree, accept, cool, hand, like">+1</span>:</div></li>
@@ -463,7 +463,7 @@
       <li><div><img src="graphics/emojis/camera.png">:<span class="name" data-alternative-name="gadgets, photo">camera</span>:</div></li>
       <li><div><img src="graphics/emojis/video_camera.png">:<span class="name" data-alternative-name="film, record">video_camera</span>:</div></li>
       <li><div><img src="graphics/emojis/movie_camera.png">:<span class="name" data-alternative-name="film, record">movie_camera</span>:</div></li>
-      <li><div><img src="graphics/emojis/computer.png">:<span class="name" data-alternative-name="tech, laptop, screen, display, monitor">computer</span>:</div></li>
+      <li><div><img src="graphics/emojis/computer.png">:<span class="name" data-alternative-name="tech, laptop, screen, display, monitor, pc, desktop">computer</span>:</div></li>
       <li><div><img src="graphics/emojis/tv.png">:<span class="name" data-alternative-name="television, technology, program, oldschool, show">tv</span>:</div></li>
       <li><div><img src="graphics/emojis/iphone.png">:<span class="name" data-alternative-name="technology, apple, gadgets, dial">iphone</span>:</div></li>
       <li><div><img src="graphics/emojis/phone.png">:<span class="name" data-alternative-name="technology, communication, dial, telephone">phone</span>:</div></li>
